@@ -1,4 +1,6 @@
 ﻿- fixed demolishing of AI brains being unreachable
 - fixed description of AI brain module containing "need to be at the top of the rocket"
 - fixed a race condition crash when clicking an AI module in the world selector
+- crew assignment screen no longer shows up on AI modules
+- clicking a landed AI module on the world selector now selects it (in addition to the camera panning)
 - added german, portuguese, russian translations
